codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__powershell_semantic_location_wrapped_git_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active
---
• Checking git git show :src/engine/duel.ts
