codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__powershell_semantic_recursive_search_projection_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active
---
• Exploring
  └ Search position: absolute in frontend
