codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__powershell_semantic_search_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active
---
• Exploring
  └ Search Entity<Asset>|e => e.AssetTag in EticketContext.cs
