codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__powershell_semantic_set_location_line_read_completed.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Explored
  └ Read duel.e2e.test.ts
