codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__powershell_semantic_variable_path_read_active.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active
---
• Exploring
  └ Read $PROFILE
