codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__powershell_semantic_variable_read_completed.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Explored
  └ Read config_toml.rs
